fixed home page

--- a/COMP2007-yuji-Lab4/Views/Home/Index.cshtml
+++ b/COMP2007-yuji-Lab4/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>COMP2007-Lab 4</h1>
     <p class="lead">
-        Created by Yuji Fujiyama - 200300256
+        Created by Yuji Fujiyama - 200300256 <br />
         Date: July 07, 2016
     </p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
